--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,12 +26,11 @@
         </RelativeLayout>
 
 
-        <ListView
-            android:id="@+id/lv_devices"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rcv_devices"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/white" />
-
 
     </LinearLayout>
 
