--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.xy.ble.MainActivity">
+    tools:context="com.xy.ble.BluetoothActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,6 +47,7 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/iv_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
